# fresh-hectaresbc

./: .gitignore  .gitmodules  AGENTS.md  CHANGE_LOG.md  README.md  ROADMAP.md  pyproject.toml
docs/: browser_app.rst  cli.rst  conf.py  data_repository.rst  development.rst  index.rst  installation.rst  overview.rst
examples/: cli_quickstart.sh  python_api_quickstart.py
planning/: access_architecture.md  arbutus_s3_special_remote_plan.md  archive_inventory_plan.md  archive_reconnaissance_2026-06-18.md  backend_abstraction.md  catalog_query_api.md  cli_command_contract.md  cold_clone_data_access_validation.md  core_access_library_architecture.md  data_repository_contract.md  datalad_data_repo_plan.md  full_data_publication_contract.md  full_layer_preview_artifact_contract.md  ingestion_workflow_design.md  map_preview_artifact_workflow.md  map_preview_eligibility_audit.md  map_view_scaffold.md  package_distribution_contract.md  package_install_smoke_test_plan.md  phase16_full_preview_publication_closeout.md  phase1_archive_reconnaissance_plan.md  phase2_metadata_provenance_plan.md  phase3_ingestion_inputs.md  phase3_ingestion_summary.md  phase3_reproducible_ingestion_plan.md  product_vision.md  retrieval_cache_api.md  source_derived_map_preview_audit.md  web_aoi_tile_selection_workflow_contract.md  web_app_product_access_contract.md  web_catalog_metadata_browser_contract.md  web_download_request_workflow_contract.md  web_hosting_deployment_plan.md  web_map_preview_workflow_contract.md
scripts/: archive_inventory.py  audit_layer_preview_feasibility.py  generate_layer_preview_batch.py  generate_map_preview_artifacts.py  generate_web_catalog.py  inspect_distribution_artifacts.py  inspect_representative_payloads.py  recover_data_layer_records.py  recover_virtual_layer_records.py  serve_web_app.py  setup_dev_venv.sh  smoke_test_map_preview_artifacts.py  smoke_test_web_app_dom.js  smoke_test_web_catalog_ui.js  smoke_test_web_static_app.py  smoke_test_wheel_install.py  summarize_root_metadata.py  summarize_zip_payloads.py  validate_recovered_catalog.py
tests/: test_catalog_api.py  test_cli_catalog_commands.py  test_cli_data_commands.py  test_cli_diagnostics_fetch_commands.py  test_cli_scaffold.py  test_datalad_backend_api.py  test_examples.py  test_layer_preview_batch_generator.py  (+7 more)
web/: README.md  (+4 more)
(+19 files in other folders)
