[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fresh-hectaresbc"
version = "0.0.0"
description = "Python access library for the recovered HectaresBC geospatial data collection."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "UBC FRESH" },
]
dependencies = [
  "typer>=0.12",
]

[project.scripts]
fresh-hectaresbc = "fresh_hectaresbc.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
