[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "fresh-hectaresbc"
version = "0.0.0"
description = "Python access library for the recovered HectaresBC geospatial data collection."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "UBC FRESH" },
]
dependencies = [
  "typer>=0.12",
]

[project.scripts]
fresh-hectaresbc = "fresh_hectaresbc.cli:app"

[project.optional-dependencies]
dev = [
  "build>=1",
  "datalad[full]>=1",
  "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fresh_hectaresbc = ["package_data/recovered_catalog/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
